--- a/Changelog
+++ b/Changelog
@@ -9,7 +9,14 @@
 - Bug fix release in send and prepareOptions
 - Breaking changes for prepareOptions parameter
 
-## [0.3.0 Minor breaking changes
+## [0.3.0] Minor breaking changes
 
 - Removed deprecated psr18 client implementation
 - To minize requirements of the library and reduce package dependencies size, we remove psr18 dependencies
+
+
+## [0.4.0] 2024-05-23
+
+- Upgraded supported php version to >=7.2
+- Set phpunit dev dependency to >=8.0
+- Added `Response`, `JsonResponse` classes and `DecodeResponseHeaders` trait to the util namespace for parsing curl response
